--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
         "src": "manage.py",
         "use": "@vercel/python",
         "config": {
-          "maxLambdaSize": "50mb"
+          "maxLambdaSize": "50mb",
+          "runtime": "python3.9" 
         }
       }
     ],
