--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,58 @@
-
-Django==2.0.13
-django-environ==0.9.0
-gunicorn==20.1.0
-whitenoise==5.2.0
+absl-py==2.1.0
+asgiref==3.8.1
+attrs==23.2.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+contourpy==1.2.1
+cycler==0.12.1
+Django==5.0.4
 django-cors-headers==4.3.1
 django-humanize==0.1.2
 djangorestframework==3.15.1
+flatbuffers==24.3.25
+fonttools==4.53.1
+h11==0.14.0
+humanize==4.9.0
+idna==3.7
+jax==0.4.30
+jaxlib==0.4.30
+joblib==1.4.2
+kiwisolver==1.4.5
+lxml==5.2.2
+matplotlib==3.9.1
+mediapipe==0.10.14
+ml-dtypes==0.4.0
+numpy==1.26.4
+opencv-contrib-python==4.10.0.84
+opencv-python==4.10.0.84
+opt-einsum==3.3.0
+outcome==1.3.0.post0
+packaging==24.0
+pandas==2.2.2
+pillow==10.3.0
+protobuf==4.25.3
+pycparser==2.22
+pyparsing==3.1.2
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytrends==4.9.2
+pytz==2024.1
+requests==2.31.0
+scikit-learn==1.5.1
+scipy==1.14.0
 
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+sounddevice==0.4.7
+sqlparse==0.5.0
+threadpoolctl==3.5.0
+trio==0.25.0
 
-
-
+tzdata==2024.1
+urllib3==2.2.1
+webdriver-manager==4.0.1
+whitenoise==6.6.0
+wsproto==1.2.0
