--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
-    "routes": [
+  "builds":[
       {
-        "src": "/(.*)",
-        "dest": "banking/wsgi.py"
+          "src": "banking/wsgi.py",
+          "use": "@vercel/python",
+          "config": {"maxLambdaSize":"15mb", "runtime":"python3.9"}
       }
-    ]
-  }
+  ],
+  "routes":[
+      {
+          "src":"/(.*)",
+          "dest":"banking/wsgi.py"
+      }
+  ]
+}
