--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,18 @@
 {
-  "builds":[
-      {
-          "src": "banking/wsgi.py",
-          "use": "@vercel/python",
-          "config": {"maxLambdaSize":"15mb", "runtime":"python3.9"}
+  "builds": [
+    {
+      "src": "banking/wsgi.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
       }
+    }
   ],
-  "routes":[
-      {
-          "src":"/(.*)",
-          "dest":"banking/wsgi.py"
-      }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "banking/wsgi.py"
+    }
   ]
 }
